--- a/sass/layout/gallery/_gallery-page.scss
+++ b/sass/layout/gallery/_gallery-page.scss
@@ -1,6 +1,9 @@
 .gallery-page {
+  
 }
-
+.gallery-page__container{
+  overflow-x: hidden;
+}
 .gallery-set {
   @extend %list;
 }
